[tool.poetry]
name = "cxr-generation"
version = "0.1.0"
description = ""
authors = ["Rajat Rasal <rajatrasal6399@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "3.9.*"
hi-ml-multimodal = "0.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"