[tool.poetry]
name = "cxr-generation"
version = "0.1.0"
description = ""
authors = ["Rajat Rasal <rajatrasal6399@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.13"
# hi-ml-multimodal = "0.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"